--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc && node dist/index.js"
+    "dev": "ts-node-dev  index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,15 @@
     "@types/argparse": "^2.0.10",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^5.54.0",
     "argparse": "^2.0.1",
     "chalk": "4.1.0",
-    "eslint": "^8.35.0"
+    "eslint": "^8.35.0",
+    "openai": "^3.2.1"
   }
 }
